<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/login_authorInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_information"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/login_image"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_authorInfoTextView"
                android:scaleType="fitCenter"
                />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_image"
                android:hint="@string/email"
                android:textSize="24sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_email"
                android:hint="@string/password"
                android:textSize="24sp"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_password"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="textEnd"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgot_password_link"
                android:padding="4dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:text="@string/log_in"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/register_here_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_button"
                android:text="@string/or_register_here"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>